# sql-visualizer

./: README.md  fix-custom-nodes.cjs  generate-icons.js  index.html  metadata.json  package-lock.json  package.json  remove_texts.py  replace_tones.py  theme-fix.cjs  update_colors.py  vite.config.ts
.github/workflows/: build.yml  deploy.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: CustomNodes.tsx  ErrorBoundary.tsx  SQLPresets.ts  SettingsModal.tsx  SqlEditor.tsx  SqlSnippetsManager.tsx  VersionHistoryModal.tsx
src/utils/: astToGraph.ts  versionHistory.ts
