[package]
name = "sql-visualizer"
version = "3.0"
description = "SQL Visualizer"
authors = [""]
license = "MIT"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = ["api-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
